--- a/MineLauncher.csproj
+++ b/MineLauncher.csproj
@@ -108,10 +108,10 @@
           <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
         </Reference>
         <Reference Include="System.Windows.Forms" />
-        <Reference Include="System.Xml" />
         <Reference Include="System.Xaml">
             <RequiredTargetFramework>4.0</RequiredTargetFramework>
         </Reference>
+        <Reference Include="System.Xml" />
         <Reference Include="WindowsBase" />
         <Reference Include="PresentationCore" />
         <Reference Include="PresentationFramework" />
@@ -141,10 +141,20 @@
           <DependentUpon>AccountWidget.xaml</DependentUpon>
         </Compile>
         <Compile Include="AppInstanceExtension.cs" />
+        <Compile Include="Commands\Command.cs" />
+        <Compile Include="Commands\FakeCommand.cs" />
+        <Compile Include="Commands\RelayCommand.cs" />
+        <Compile Include="Converters.cs" />
+        <Compile Include="Extensions.cs" />
+        <Compile Include="JavaBrowser.xaml.cs">
+          <DependentUpon>JavaBrowser.xaml</DependentUpon>
+        </Compile>
+        <Compile Include="JavaUtils.cs" />
         <Compile Include="Loaders\ForgeLoader.cs" />
         <Compile Include="Loaders\LoaderBase.cs" />
         <Compile Include="Loaders\Manager.cs" />
         <Compile Include="Loaders\VanillaLoader.cs" />
+        <Compile Include="LogFileWatcher.cs" />
         <Compile Include="MainTab.xaml.cs">
           <DependentUpon>MainTab.xaml</DependentUpon>
         </Compile>
@@ -158,14 +168,20 @@
           <AutoGen>True</AutoGen>
           <DependentUpon>Strings.ru.resx</DependentUpon>
         </Compile>
-        <Compile Include="RelayCommand.cs" />
         <Compile Include="Repo.cs" />
-        <Compile Include="Settings.cs" />
-        <Compile Include="SettingsScreen.xaml.cs">
+        <Compile Include="Screens\AccountScreen.xaml.cs">
+          <DependentUpon>AccountScreen.xaml</DependentUpon>
+        </Compile>
+        <Compile Include="Screens\ModpackGenericScreen.xaml.cs">
+          <DependentUpon>ModpackGenericScreen.xaml</DependentUpon>
+        </Compile>
+        <Compile Include="Screens\SettingsScreen.xaml.cs">
           <DependentUpon>SettingsScreen.xaml</DependentUpon>
         </Compile>
+        <Compile Include="Settings.cs" />
         <Compile Include="Utils.cs" />
         <Page Include="AccountWidget.xaml" />
+        <Page Include="JavaBrowser.xaml" />
         <Page Include="MainTab.xaml" />
         <Page Include="MainWindow.xaml">
             <Generator>MSBuild:Compile</Generator>
@@ -179,7 +195,9 @@
             <DependentUpon>MainWindow.xaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
-        <Page Include="SettingsScreen.xaml" />
+        <Page Include="Screens\AccountScreen.xaml" />
+        <Page Include="Screens\ModpackGenericScreen.xaml" />
+        <Page Include="Screens\SettingsScreen.xaml" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Properties\AssemblyInfo.cs">
