--- a/packages.config
+++ b/packages.config
@@ -3,7 +3,10 @@
   <package id="CmlLib.Core" version="4.0.5" targetFramework="net472" />
   <package id="CmlLib.Core.Commons" version="4.0.0" targetFramework="net472" />
   <package id="CmlLib.Core.Installer.Forge" version="1.1.0" targetFramework="net472" />
+  <package id="Cyotek.Drawing.BitmapFont" version="2.0.0" targetFramework="net472" />
   <package id="Extended.Wpf.Toolkit" version="4.7.25104.5739" targetFramework="net472" />
+  <package id="HelixToolkit" version="2.27.0" targetFramework="net472" />
+  <package id="HelixToolkit.Wpf.SharpDX" version="2.27.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.48" targetFramework="net472" />
   <package id="LZMA-SDK" version="19.0.0" targetFramework="net472" />
   <package id="LibGit2Sharp" version="0.31.0" targetFramework="net472" />
@@ -11,7 +14,15 @@
   <package id="Material.Icons" version="3.0.0-preview1.1" targetFramework="net472" />
   <package id="Material.Icons.WPF" version="3.0.0-preview1.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.D3DCompiler" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Direct3D9" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net472" />
   <package id="SharpZipLib" version="1.4.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
   <package id="System.Memory" version="4.6.0" targetFramework="net472" />
