Add Elytra support and improve skin viewer customization
- Introduce DisplayElytra, PlayerSlim, PlayerSkin and CapeSkin dependency properties
- Add support for Elytra model display
- Refactor material handling and model loading in SkinView
- Implement dynamic model switching between wide/slim player models and cape/elytra

--- a/MineLauncher.csproj
+++ b/MineLauncher.csproj
@@ -304,6 +304,9 @@
     <ItemGroup>
       <EmbeddedResource Include="Cape.bbmodel" />
     </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Include="Elytra.bbmodel" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
       <PropertyGroup>
